--- a/QuantumTechnicianApp/Src/ViewDetailsScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ViewDetailsScreen.fx.yaml
@@ -1196,6 +1196,7 @@ ViewDetailsScreen As screen:
 
                     Checkbox4_17 As checkbox:
                         CheckboxBorderColor: =RGBA(0, 0, 0, 1)
+                        Default: =true
                         Font: =Font.Arial
                         FontWeight: =FontWeight.Semibold
                         Height: =56
@@ -1260,6 +1261,7 @@ ViewDetailsScreen As screen:
 
                     Checkbox4_18 As checkbox:
                         CheckboxBorderColor: =RGBA(0, 0, 0, 1)
+                        Default: =true
                         Font: =Font.Arial
                         FontWeight: =FontWeight.Semibold
                         Height: =56
@@ -1321,7 +1323,8 @@ ViewDetailsScreen As screen:
                         ZIndex: =4
 
                     Checkbox4_19 As checkbox:
-                        CheckboxBorderColor: =
+                        CheckboxBorderColor: =RGBA(0, 0, 0, 1)
+                        Default: =true
                         DisabledBorderColor: =RGBA(0, 0, 0, 1)
                         Font: =Font.Arial
                         FontWeight: =FontWeight.Semibold
