--- a/QuantumTechnicianApp/Src/CreatLeadScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/CreatLeadScreen.fx.yaml
@@ -916,7 +916,7 @@ CreatLeadScreen As screen:
 
         Rectangle1_1 As rectangle:
             Fill: =RGBA(255, 255, 255, 1)
-            Height: =Parent.Height/4
+            Height: =Parent.Height/3.5
             Width: =Parent.Width/1.3
             X: =(Parent.Width-Self.Width)/2
             Y: =(Parent.Height-Self.Height)/2
@@ -1006,7 +1006,7 @@ CreatLeadScreen As screen:
             Y: =ctnHeaderDS.Y+ctnHeaderDS.Height+5
             ZIndex: =3
 
-    PopoploaderCS As groupContainer.manualLayoutContainer:
+    PopopContracterrorCS As groupContainer.manualLayoutContainer:
         Fill: =RGBA(0, 0, 0, 0.29)
         Height: =Parent.Height
         Visible: =VarContractError 
@@ -1015,7 +1015,7 @@ CreatLeadScreen As screen:
 
         Rectangle1_2 As rectangle:
             Fill: =RGBA(255, 255, 255, 1)
-            Height: =Parent.Height/4
+            Height: =Parent.Height/3.5
             Width: =Parent.Width/1.3
             X: =(Parent.Width-Self.Width)/2
             Y: =(Parent.Height-Self.Height)/2
@@ -1077,7 +1077,7 @@ CreatLeadScreen As screen:
                 Width: =Parent.Width/5
                 ZIndex: =3
 
-    PopopSuccessSS_2 As groupContainer.manualLayoutContainer:
+    PopoploaderCS As groupContainer.manualLayoutContainer:
         Fill: =RGBA(0, 0, 0, 0.29)
         Height: =Parent.Height
         Visible: =VarLoader 
@@ -1086,7 +1086,7 @@ CreatLeadScreen As screen:
 
         Rectangle1_3 As rectangle:
             Fill: =RGBA(255, 255, 255, 1)
-            Height: =Parent.Height/4
+            Height: =Parent.Height/3.5
             Width: =Parent.Width/1.3
             X: =(Parent.Width-Self.Width)/2
             Y: =(Parent.Height-Self.Height)/2
