--- a/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
@@ -825,7 +825,7 @@ DashboardScreen As screen:
                             Size: |
                                 =//19.22
                                 If(Parent.Width<358,12,Parent.Width>358,14,18)
-                            Text: ="Quoted"
+                            Text: ="Sold"
                             Width: =Parent.Width
                             X: =
                             Y: =Parent.Height/10
