--- a/QuantumTechnicianApp/Src/CreatLeadScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/CreatLeadScreen.fx.yaml
@@ -1059,7 +1059,7 @@ CreatLeadScreen As screen:
                 Size: =14
                 Text: |-
                     =
-                        "Contract number is not found in your area,Please try again"
+                        "Contract number is not found in your District,Please try again"
                 Width: =Parent.Width
                 ZIndex: =2
 
