--- a/QuantumTechnicianApp/Src/ScopeScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ScopeScreen.fx.yaml
@@ -1,7 +1,7 @@
 ScopeScreen As screen:
     OnVisible: |-
-        =If(IsBlank(intxtScope),Set(VarScope,false));
-        If(IsBlank(IntxtScopeofwork),Set(VarScopeofwork,false));
+        =If(IsBlank(CboxScope),Set(VarScope,false));
+        If(IsBlank(CboxScopeofwork),Set(VarScopeofwork,false));
         If(IsBlank(IntxtManuallyScopeofwork),Set(VarCustomScopeofwork,false));
 
     ctnMainSS As groupContainer.verticalAutoLayoutContainer:
@@ -404,7 +404,7 @@ ScopeScreen As screen:
                     Fill: =RGBA(0, 0, 0, 0)
                     Height: =50
                     Required: =false
-                    Update: =intxtScope.Selected
+                    Update: =CboxScope.Selected
                     Width: =Parent.Width
                     X: =0
                     Y: =0
@@ -426,7 +426,7 @@ ScopeScreen As screen:
                         Y: =10
                         ZIndex: =1
 
-                    intxtScope As combobox:
+                    CboxScope As combobox:
                         BorderColor: =If(IsBlank(Parent.Error),Parent.BorderColor, Color.Red)
                         ChevronBackground: =RGBA(202, 202, 202, 1)
                         ChevronHoverBackground: =RGBA(202, 202, 202, 1)
@@ -448,7 +448,7 @@ ScopeScreen As screen:
                         SearchFields: =["shlrf_primaryscopeofworkname"]
                         SearchItems: |-
                             =Search(//' PrimaryScopeofWorks'
-                            GCPrimaryScopeofWorks,intxtScope.SearchText,"shlrf_primaryscopeofworkname")
+                            GCPrimaryScopeofWorks,CboxScope.SearchText,"shlrf_primaryscopeofworkname")
                         SelectionFill: =RGBA(202, 202, 202, 1)
                         SelectMultiple: =false
                         Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
@@ -471,7 +471,7 @@ ScopeScreen As screen:
                         Visible: =Parent.DisplayMode=DisplayMode.Edit
                         Width: =Parent.Width - 60
                         X: =30
-                        Y: =intxtScope.Y + intxtScope.Height
+                        Y: =CboxScope.Y + CboxScope.Height
                         ZIndex: =3
 
                     StarVisibleScope As label:
@@ -495,7 +495,7 @@ ScopeScreen As screen:
                     Fill: =RGBA(0, 0, 0, 0)
                     Height: =50
                     Required: =false
-                    Update: =IntxtScopeofwork.Selected
+                    Update: =CboxScopeofwork.Selected
                     Width: =Parent.Width
                     X: =0
                     Y: =1
@@ -515,7 +515,7 @@ ScopeScreen As screen:
                         Y: =10
                         ZIndex: =1
 
-                    IntxtScopeofwork As combobox:
+                    CboxScopeofwork As combobox:
                         BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
                         ChevronBackground: =RGBA(202, 202, 202, 1)
                         ChevronHoverBackground: =RGBA(202, 202, 202, 1)
@@ -527,11 +527,11 @@ ScopeScreen As screen:
                         Height: =50
                         HoverFill: =RGBA(0, 0, 0, 0)
                         InputTextPlaceholder: ="Search Scope of Work"
-                        Items: =Filter(GCSecondaryScopeofWorks,PrimaryScopeofWorkLID.'PrimaryScopeofWorkName '=intxtScope.Selected.'PrimaryScopeofWorkName ')
+                        Items: =Filter(GCSecondaryScopeofWorks,PrimaryScopeofWorkLID.'PrimaryScopeofWorkName '=CboxScope.Selected.'PrimaryScopeofWorkName ')
                         OnChange: =Set(VarScopeofwork,true)
                         PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
                         SearchFields: =["shlrf_secondaryscopeofworkname"]
-                        SearchItems: =Search(Filter(GCSecondaryScopeofWorks,PrimaryScopeofWorkLID.'PrimaryScopeofWorkName '=intxtScope.Selected.'PrimaryScopeofWorkName '),IntxtScopeofwork.SearchText,"shlrf_secondaryscopeofworkname")
+                        SearchItems: =Search(Filter(GCSecondaryScopeofWorks,PrimaryScopeofWorkLID.'PrimaryScopeofWorkName '=CboxScope.Selected.'PrimaryScopeofWorkName '),CboxScopeofwork.SearchText,"shlrf_secondaryscopeofworkname")
                         SelectionFill: =RGBA(202, 202, 202, 1)
                         SelectMultiple: =false
                         Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
@@ -554,7 +554,7 @@ ScopeScreen As screen:
                         Visible: =Parent.DisplayMode=DisplayMode.Edit
                         Width: =Parent.Width - 60
                         X: =30
-                        Y: =IntxtScopeofwork.Y + IntxtScopeofwork.Height
+                        Y: =CboxScopeofwork.Y + CboxScopeofwork.Height
                         ZIndex: =3
 
                     StarVisibleScopeofwork As label:
@@ -692,12 +692,14 @@ ScopeScreen As screen:
                     Fill: =RGBA(255, 0, 0, 1)
                     Font: =Font.Arial
                     HoverFill: =Color.Red
-                    OnSelect: |
-                        =Set(VarIndicator,true);
+                    OnSelect: |-
+                        =If(!IsBlank(CboxScope.Selected)&&!IsBlank(CboxScopeofwork.Selected) || !IsBlank(CboxScope.Selected) ||!IsBlank(CboxScopeofwork.Selected),
+                        Set(VarIndicator,true);
                         Set(VarIndicatorUS,true);
                         Set(VarIndicatorSS,true);
                         Set(VarIndicatorES,false);
-                        Navigate(EstimateScreen);
+                        Navigate(EstimateScreen),
+                        Set(VarNotification,true););
                     Size: =If(Parent.Width<358,12,Parent.Width>358,12)
                     Text: ="Next"
                     Width: =If(Parent.Width<Parent.Height,Parent.Width/8,Parent.Width/5)
@@ -731,6 +733,76 @@ ScopeScreen As screen:
                     Transparency: =0.9
                     Width: =Parent.Width
                     ZIndex: =1
+
+    PopopContracterrorNextSS_2 As groupContainer.manualLayoutContainer:
+        Fill: =RGBA(0, 0, 0, 0.29)
+        Height: =Parent.Height
+        Visible: =VarNotification
+        Width: =Parent.Width
+        ZIndex: =4
+
+        Rectangle1_5 As rectangle:
+            Fill: =RGBA(255, 255, 255, 1)
+            Height: =Parent.Height/3.5
+            Width: =Parent.Width/1.3
+            X: =(Parent.Width-Self.Width)/2
+            Y: =(Parent.Height-Self.Height)/2
+            ZIndex: =1
+
+        Container6_5 As groupContainer.verticalAutoLayoutContainer:
+            BorderThickness: =1
+            Height: =Rectangle1_5.Height
+            LayoutDirection: =LayoutDirection.Vertical
+            LayoutMode: =LayoutMode.Auto
+            Width: =Rectangle1_5.Width
+            X: =Rectangle1_5.X
+            Y: =Rectangle1_5.Y
+            ZIndex: =2
+
+            Container9_5 As groupContainer.verticalAutoLayoutContainer:
+                DropShadow: =DropShadow.None
+                FillPortions: =0
+                Height: =Parent.Height/3
+                LayoutDirection: =LayoutDirection.Vertical
+                LayoutMinHeight: =100
+                LayoutMinWidth: =250
+                LayoutMode: =LayoutMode.Auto
+                Width: =Parent.Width
+                ZIndex: =1
+
+                Image4_5 As image:
+                    AlignInContainer: =AlignInContainer.Center
+                    Height: =Parent.Height
+                    Image: =error
+                    PaddingTop: =40
+                    Width: =Parent.Width
+                    ZIndex: =1
+
+            Label3_5 As label:
+                Align: =Align.Center
+                AlignInContainer: =AlignInContainer.Center
+                Font: =Font.Arial
+                FontWeight: =FontWeight.Semibold
+                Height: =100
+                Size: =14
+                Text: |-
+                    =
+                        "Scope  & Scope of Work are mandatory "
+                Width: =Parent.Width
+                ZIndex: =2
+
+            Button4_5 As button:
+                AlignInContainer: =AlignInContainer.Center
+                Fill: =RGBA(255, 0, 0, 1)
+                Font: =Font.Arial
+                HoverFill: =ColorFade(Self.Fill, -20%)
+                OnSelect: |-
+                    =Navigate(ScopeScreen);
+                    Set(VarNotification,false);
+                Size: =14
+                Text: ="Ok"
+                Width: =Parent.Width/5
+                ZIndex: =3
 
     grpMenuDS_1 As group:
         Height: =5
