--- a/QuantumTechnicianApp/Src/UnitScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/UnitScreen.fx.yaml
@@ -609,10 +609,14 @@ UnitScreen As screen:
                     Font: =Font.Arial
                     HoverFill: =Color.Red
                     OnSelect: |+
-                        =Set(VarIndicator,true);
+                        =
+                        If(
+                            IsBlank(IntxtUnitCount) || IsBlank(IntxtUnitDescription),
+                              Set(VarNotification,true);,
+                            Set(VarIndicator,true);
                         Set(VarIndicatorUS,true);
                         Set(VarIndicatorSS,false);
-                        Navigate(ScopeScreen);
+                        Navigate(ScopeScreen));
                         
                     Size: =If(Parent.Width<358,12,Parent.Width>358,12)
                     Text: ="Next"
@@ -645,6 +649,74 @@ UnitScreen As screen:
                     Transparency: =0.9
                     Width: =Parent.Width
                     ZIndex: =1
+
+    PopopContracterrorNextSS_1 As groupContainer.manualLayoutContainer:
+        Fill: =RGBA(0, 0, 0, 0.29)
+        Height: =Parent.Height
+        Visible: =VarNotification
+        Width: =Parent.Width
+        ZIndex: =5
+
+        Rectangle1_4 As rectangle:
+            Fill: =RGBA(255, 255, 255, 1)
+            Height: =Parent.Height/3.5
+            Width: =Parent.Width/1.3
+            X: =(Parent.Width-Self.Width)/2
+            Y: =(Parent.Height-Self.Height)/2
+            ZIndex: =1
+
+        Container6_4 As groupContainer.verticalAutoLayoutContainer:
+            BorderThickness: =1
+            Height: =Rectangle1_4.Height
+            LayoutDirection: =LayoutDirection.Vertical
+            LayoutMode: =LayoutMode.Auto
+            Width: =Rectangle1_4.Width
+            X: =Rectangle1_4.X
+            Y: =Rectangle1_4.Y
+            ZIndex: =2
+
+            Container9_4 As groupContainer.verticalAutoLayoutContainer:
+                DropShadow: =DropShadow.None
+                FillPortions: =0
+                Height: =Parent.Height/3
+                LayoutDirection: =LayoutDirection.Vertical
+                LayoutMinHeight: =100
+                LayoutMinWidth: =250
+                LayoutMode: =LayoutMode.Auto
+                Width: =Parent.Width
+                ZIndex: =1
+
+                Image4_4 As image:
+                    AlignInContainer: =AlignInContainer.Center
+                    Height: =Parent.Height
+                    Image: =error
+                    PaddingTop: =40
+                    Width: =Parent.Width
+                    ZIndex: =1
+
+            Label3_4 As label:
+                Align: =Align.Center
+                AlignInContainer: =AlignInContainer.Center
+                Font: =Font.Arial
+                FontWeight: =FontWeight.Semibold
+                Height: =100
+                Size: =14
+                Text: ="All fields are mandatory"
+                Width: =Parent.Width
+                ZIndex: =2
+
+            Button4_4 As button:
+                AlignInContainer: =AlignInContainer.Center
+                Fill: =RGBA(255, 0, 0, 1)
+                Font: =Font.Arial
+                HoverFill: =ColorFade(Self.Fill, -20%)
+                OnSelect: |-
+                    =Navigate(UnitScreen);
+                    Set(VarNotification,false);
+                Size: =14
+                Text: ="Ok"
+                Width: =Parent.Width/5
+                ZIndex: =3
 
     grpMenuDS_8 As group:
         Height: =5
