--- a/QuantumQQTeamApp/Src/App.fx.yaml
+++ b/QuantumQQTeamApp/Src/App.fx.yaml
@@ -56,6 +56,7 @@ App As appinfo:
                 Password: "team2"
             }
         );
+    Theme: =PowerAppsTheme
 
     Host As hostControl.DefaultHostControlVariant:
         OnCancel: =false
